[INF-348] Drop support for unused file and location elements Add support for list, type, name, and value elements Add configuration for iOS Simulator using all the new elements